Add AI-powered todo suggestions with OpenAI integration
- Created OpenAIWrapper for API communication

- Added ChatService for generating todo suggestions

- Updated TodoController with /suggestions endpoint

Organized imports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,8 @@ server.port=8080
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/tododb
-spring.datasource.username=postgres
-# Set your password here locally
-spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -27,3 +25,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 
+# OpenAI Configuration
+openai.api.key=${OPENAI_API_KEY}
