--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>2.8.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.openai</groupId>
+		    <artifactId>openai-java</artifactId>
+		    <version>4.15.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
